# grid-template

./: .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  Makefile.common  Makefile.common.mak  README.md  pyproject.toml
.github/: template.yml
.github/workflows/: setup.yml
docs/: best_practices.md  detailed_doc.md  git_commands.md  governance.md
scripts/: fetch-wheel.sh  setup.sh
